--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,26 @@ body {
   padding: 0;
   background: none;
 }
+
+.course-item {
+  position: relative;
+  text-align: center;
+  color: black;
+  -webkit-text-fill-color: white; /* Will override color (regardless of order) */
+  -webkit-text-stroke-width: 1px;
+  /* -webkit-text-stroke-color: black; */
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.course-item img {
+  border: 1px solid #ddd;
+  border-radius:10px;
+  -webkit-border-radius:10px;
+  -moz-border-radius:10px;
+  -o-border-radius:10px;
+}
